KRunner integration: Send window pixmap along

If there is no icon name available which is very often
the case on X11.

BUG: 430054